<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@drawable/bg"
        tools:context=".LoginActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

            <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/logo_transparent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="80dp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loginNOW"
                    android:textSize="45sp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/purple"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAllCaps="true"
                    />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittextbackground"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:elevation="3dp">
                <EditText
                        android:id="@+id/loginEmail"
                        android:layout_width="0dp"
                        android:layout_weight="10"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:textSize="18sp"
                        android:hint="@string/email"
                        android:drawableStart="@drawable/person"
                        android:drawablePadding="5dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        />
                <ImageView
                        android:id="@+id/clearEmail"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:src="@drawable/clear"
                        android:visibility="gone"
                        android:onClick="clearEmailField"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittextbackground"
                    android:padding="15dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:elevation="3dp">
                <EditText
                        android:id="@+id/loginPassword"
                        android:layout_width="0dp"
                        android:layout_weight="10"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:textSize="18sp"
                        android:hint="@string/pass"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        />
                <ImageView
                        android:id="@+id/clearPassword"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:src="@drawable/clear"
                        android:visibility="gone"
                        android:onClick="clearPasswordField"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotPassword"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="40dp"
                    android:textColor="@color/black"
                    android:onClick="ResetPassword"
                    />

            <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp"
                    android:background="@drawable/button_background"
                    android:text="@string/loginBTN"
                    android:onClick="login"
                    android:textSize="20sp"
                    android:elevation="5dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    />

            <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:elevation="2dp">

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newUser"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                <View
                        android:layout_width="3dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/textViewRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registerNOW"
                        android:onClick="goToRegister"
                        android:textColor="@color/purple"
                        android:textSize="20sp"
                        android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>