<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg"
        tools:context=".RegistrationActivity">

  <ScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scrollbars="none">

      <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp">

          <ImageView
                  android:layout_width="120dp"
                  android:layout_height="120dp"
                  android:src="@drawable/logo_transparent"
                  android:layout_gravity="center"
                  android:layout_marginBottom="20dp"
                  android:layout_marginTop="60dp"
                  />
          <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/registerNOW"
                  android:textSize="45sp"
                  android:layout_marginBottom="40dp"
                  android:textColor="@color/purple"
                  android:textStyle="bold"
                  android:gravity="center"
                  android:textAllCaps="true"
                  />

          <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@drawable/edittextbackground"
                  android:layout_marginBottom="20dp"
                  android:padding="15dp"
                  android:gravity="center_vertical"
                  android:elevation="3dp" >

              <EditText
                      android:id="@+id/registerUsername"
                      android:layout_width="0dp"
                      android:layout_weight="10"
                      android:layout_height="wrap_content"
                      android:background="@color/white"
                      android:textSize="18sp"
                      android:hint="@string/username"
                      android:drawableStart="@drawable/name"
                      android:drawablePadding="5dp"
                      android:inputType="text"
                      android:textColor="@color/black"/>
              <ImageView
                      android:id="@+id/clearUsername"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:background="@color/white"
                      android:visibility="gone"
                      android:src="@drawable/clear"
                      android:onClick="clearUsernameField"/>
          </LinearLayout>

          <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@drawable/edittextbackground"
                  android:layout_marginBottom="20dp"
                  android:padding="15dp"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  android:elevation="3dp">
              <EditText
                      android:id="@+id/registerEmail"
                      android:layout_width="0dp"
                      android:layout_weight="10"
                      android:layout_height="wrap_content"
                      android:background="@color/white"
                      android:textSize="18sp"
                      android:hint="@string/email"
                      android:drawableStart="@drawable/person"
                      android:drawablePadding="5dp"
                      android:inputType="textEmailAddress"
                      android:textColor="@color/black"
                      />
              <ImageView
                      android:id="@+id/clearEmail"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:background="@color/white"
                      android:src="@drawable/clear"
                      android:visibility="gone"
                      android:onClick="clearEmailField"/>
          </LinearLayout>

          <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@drawable/edittextbackground"
                  android:layout_marginBottom="40dp"
                  android:padding="15dp"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  android:elevation="3dp">
              <EditText
                      android:id="@+id/registerPassword"
                      android:layout_width="0dp"
                      android:layout_weight="10"
                      android:layout_height="wrap_content"
                      android:background="@color/white"
                      android:textSize="18sp"
                      android:hint="@string/pass"
                      android:drawablePadding="5dp"
                      android:drawableStart="@drawable/password"
                      android:inputType="textPassword"
                      android:textColor="@color/black"
                      />
              <ImageView
                      android:id="@+id/clearPassword"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:background="@color/white"
                      android:src="@drawable/clear"
                      android:visibility="gone"
                      android:onClick="clearPasswordField"/>
          </LinearLayout>

          <Button
                  android:id="@+id/buttonRegister"
                  android:layout_width="250dp"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="40dp"
                  android:text="@string/registerBTN"
                  android:textSize="20sp"
                  android:background="@drawable/button_background"
                  android:textColor="@color/white"
                  android:layout_gravity="center"
                  android:onClick="register"
                  />

          <LinearLayout
                  android:id="@+id/linearLayout"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:orientation="horizontal">

              <TextView
                      android:id="@+id/textView"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/hasAccount"
                      android:textColor="@color/black"
                      android:textSize="18sp" />

              <View
                      android:layout_width="3dp"
                      android:layout_height="wrap_content"/>

              <TextView
                      android:id="@+id/textViewLogin"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/loginNOW"
                      android:textColor="@color/purple"
                      android:textSize="20sp"
                      android:textStyle="bold"
                      android:onClick="goToLogin"/>
          </LinearLayout>
      </LinearLayout>
  </ScrollView>
</LinearLayout>