<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg"
        tools:context=".ResetPasswordActivity">

   <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:scrollbars="none"
           android:layout_margin="20dp"
           android:layout_centerInParent="true">

       <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

           <ImageView
                   android:layout_width="120dp"
                   android:layout_height="120dp"
                   android:src="@drawable/logo_transparent"
                   android:layout_gravity="center"
                   android:layout_marginBottom="30dp" />

           <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/resetPassword"
                   android:textSize="35sp"
                   android:layout_marginBottom="50dp"
                   android:textColor="@color/purple"
                   android:textStyle="bold"
                   android:gravity="center"
                   android:textAllCaps="true" />

           <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@drawable/edittextbackground"
                   android:layout_marginBottom="50dp"
                   android:padding="15dp"
                   android:orientation="horizontal"
                   android:gravity="center_vertical"
                   android:elevation="3dp">

               <EditText
                       android:id="@+id/resetEmail"
                       android:layout_width="0dp"
                       android:layout_weight="10"
                       android:layout_height="wrap_content"
                       android:background="@color/white"
                       android:textSize="18sp"
                       android:hint="@string/email"
                       android:drawableStart="@drawable/person"
                       android:drawablePadding="5dp"
                       android:inputType="textEmailAddress"
                       android:textColor="@color/black" />

               <ImageView
                       android:id="@+id/clearEmail"
                       android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="wrap_content"
                       android:background="@color/white"
                       android:src="@drawable/clear"
                       android:visibility="gone"
                       android:onClick="clearEmailField" />
           </LinearLayout>

           <Button
                   android:layout_width="250dp"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="50dp"
                   android:background="@drawable/button_background"
                   android:text="@string/resetBTN"
                   android:textSize="20sp"
                   android:elevation="5dp"
                   android:textColor="@color/white"
                   android:layout_gravity="center"
                   android:onClick="resetPassword" />
       </LinearLayout>
   </ScrollView>
</RelativeLayout>